[FIX] Title truncation problem
	- title in timetable truncates correctly when height of the cell is greater than height of the parent
	- fixes #300
	- reviewed by jbenito:
		- changed behaviour for arrows to avoid moving text inside tt entries
		- fixed bug with truncating session slot's title.

--- a/indico/htdocs/css/Default.css
+++ b/indico/htdocs/css/Default.css
@@ -4352,7 +4352,6 @@ td.collaborationDisplayInfoLeftCol span {
     -moz-border-radius: 3px;
     -webkit-border-radius:3px;
     behavior: url(border-radius.htc);
-    overflow: hidden;
     color: #202020;
 }
 
@@ -5767,4 +5766,23 @@ div.cloneElements {
     border-bottom:1px solid #AAAAAA;
     border-right:1px solid #AAAAAA;
     width: 450px;
+}
+
+.ttentryArrowsBackground {
+    padding: 3px;
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    -moz-border-radius-bottomleft:3px;
+    border-bottom:1px solid #AAAAAA;
+    border-left:1px solid #AAAAAA;
+    background-color: white;
+    width: 33px;
+    height: 14px;
+}
+
+.ttentryArrows {
+    padding: 2px;
+    position: absolute;
+    right:0px;
 }
